<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="fivecolorballs_app_name">5 ColorBalls</string>
    <string name="easyStr">Easy</string>
    <string name="difficultStr">Difficult</string>
    <string name="playerLevelStr">Level</string>
    <string name="quitGame">Quit</string>
    <string name="newGame">New</string>
    <string name="optionButton">OPTION</string>
    <string name="title_activity_history">Top10ScoreActivity</string>
    <string name="top10Score">Top 10 Scores</string>
    <string name="title_activity_global">GlobalTop10Activity</string>
    <string name="globalTop10Score">Global Top 10 Scores</string>
    <string name="action_settings">Settings</string>
    <string name="okString">Ok</string>
    <string name="yesStr">YES</string>
    <string name="noStr">NO</string>
    <string name="gameOverStr">Game Over.\nContinue?</string>
    <string name="cancelStr">Cancel</string>
    <string name="submitStr">Send</string>
    <string name="nameStr">Input your name</string>
    <string name="loadingString">Loading …</string>
    <string name="undoStr">Undo</string>
    <string name="top10Str">Top 10</string>
    <string name="globalTop10Str">Global Top 10</string>
    <string name="fileMenuStr">File</string>
    <string name="settingStr">Settings</string>
    <string name="soundStr">Sound</string>
    <string name="onStr">On</string>
    <string name="offStr">Off</string>
    <string name="showingAdsString">Showing Ads …</string>
    <string name="saveGameString">Save Game</string>
    <string name="loadGameString">Load Game</string>
    <string name="moreActionString">More</string>
    <string name="savingGameString">Saving Game</string>
    <string name="loadingGameString">Loading Game</string>
    <string name="succeededSaveGameString">Saved game successfully.</string>
    <string name="failedSaveGameString">Failed to save game.</string>
    <string name="succeededLoadGameString">Loaded game successfully.</string>
    <string name="failedLoadGameString">Failed to load game.</string>
    <string name="sureToSaveGameString">Sure to save game?</string>
    <string name="sureToLoadGameString">Sure to load game?</string>
    <string name="warningSaveGameString">Excess the limit</string>
    <string name="howManyTimesString">times</string>
    <string name="continueString">Continue</string>
    <string name="companyDescriptionString">Design customized software, Apps, Smart phone Apps and Web Apps.</string>
    <string name="companyNameString">Smile Information Inc.</string>
    <string name="companyContactEmailString">leechao1959@gmail.com</string>

    <string name="google_AdMobAppID">"ca-app-pub-8354869049759576~1891379677"</string>
    <string name="google_AdMobAppID_2">"ca-app-pub-8354869049759576~8647116443"</string>
</resources>
