<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/firstLinearLayoutForSettings"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mainSettingLinearLayout"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#bb0000ff"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstLinearLayoutForSettings"
        android:weightSum="5">
        <TextView
            android:id="@+id/settingTitle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/settingStr">
        </TextView>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:divider="@drawable/layout_horizontal_divider"
            android:showDividers="beginning|end"
            android:layout_weight="3">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="2"
                tools:ignore="UselessParent">
                <TextView
                    android:id="@+id/soundSettingTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_marginStart="10dp"
                    android:textColor="#ffffff00"
                    android:text="@string/soundStr"
                    android:layout_weight="1">
                </TextView>
                <ToggleButton
                    android:id="@+id/soundSwitch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="10dp"
                    android:background="@android:color/transparent"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:textOn="@string/onStr"
                    android:textOff="@string/offStr"
                    android:layout_weight="1">
                </ToggleButton>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:divider="@drawable/layout_horizontal_divider"
            android:showDividers="beginning|end"
            android:layout_weight="1">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="?android:attr/buttonBarStyle"
                android:weightSum="2">
                <Button
                    android:id="@+id/cancelSettingButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:gravity="center"
                    android:textAllCaps="false"
                    android:textColor="@color/red"
                    android:background="@android:color/transparent"
                    android:text="@string/cancelStr">
                </Button>
                <Button
                    android:id="@+id/confirmSettingButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:gravity="center"
                    android:textAllCaps="false"
                    android:textColor="@color/green"
                    android:background="@android:color/transparent"
                    android:text="@string/okString">
                </Button>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintBottom_toBottomOf="parent">
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>